# FastAPI-MySQL-RestAPI

./: pyproject.toml
src/: app.py
src/config/: db.py
src/models/: user.py
src/routes/: user.py
src/schemas/: user.py
